--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,6 +53,7 @@ $breakpoints:(
 
     @include mq(pc){
         font-size: 16px;
+        line-height: 160%;
     }
   }
   .image1{
@@ -172,7 +173,7 @@ $breakpoints:(
     display: inline-flex;
     height: 32px;
     width: fit-content;
-    padding: 6px 24px 8px 24px;
+    padding: 6px 22px 8px 22px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
@@ -187,7 +188,7 @@ $breakpoints:(
     display: inline-flex;
     height: 40px;
     width: fit-content;
-    padding: 6px 24px 8px 24px;
+    padding: 6px 22px 8px 22px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
@@ -221,13 +222,13 @@ $breakpoints:(
   }
 
 .header__inner{
-    padding: 16px 20px;
+    padding: 15.5px 20px;
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: space-between;
     @include mq(pc){
-        padding: 20px 24px;
+        padding: 14px 24px;
         margin-top: auto;
         margin-bottom: auto;
     }
@@ -258,6 +259,7 @@ $breakpoints:(
         display: flex;
         gap: 12px;
         align-items: center;
+        font-size: 12px;
     }
 }
 
@@ -306,7 +308,6 @@ $breakpoints:(
 .header__button{
 @include mq(pc){
     height: 36px;
-    padding: 6px 24px 8px 24px;
 }
 }
 
@@ -370,16 +371,20 @@ $breakpoints:(
 .mv{
     background: url(../img/Onomichi-mv-sp.png) no-repeat center center / cover;
     width: 100%;
-    margin-bottom: 156px;
+    margin-bottom: 188px;
     @include mq(pc){
+        background: url(../img/Onomichi-mv-pc.png) no-repeat center center / cover;
         margin-bottom: 96px;
     }
 }
 
+.mv__inner{
+    position: relative;
+}
+
 .mv__content{
     padding-top: 17px;
-    padding-bottom: 376px;
-    position: relative;
+    padding-bottom: 377px;
     @include mq(pc){
         padding-top: 34px;
         padding-bottom: 463px;
@@ -404,6 +409,9 @@ $breakpoints:(
 
 .mv__lead{
     margin-top: 20px;
+    @include mq(pc){
+        margin-top: 23px;
+    }
 }
 
 .mv__lead1{
@@ -441,17 +449,19 @@ $breakpoints:(
 
 .fukidashi{
     position: absolute;
-    top: 196px;
-    left: 0;
+    top: 195px;
+    left: 20px;
 
     @include mq(pc){
-        top: 242px;
-        left: 37px;
+        top: 277px;
+        left: 369px;
     }
     img{
         width: 142px;
+        height: 80px;
         @include mq(pc){
             width: 244px;
+            height: 130px;
         }
     }
 }
@@ -459,10 +469,10 @@ $breakpoints:(
 .present{
     position: absolute;
     top: 188px;
-    right: 24.49px;
+    right: 45px;
     @include mq(pc){
-        top: 257px;
-        right: 127px;
+        top: 294px;
+        right: 459px;
     }
     img{
         width: 110px;
@@ -480,25 +490,27 @@ $breakpoints:(
         bottom: -80px;
     }
     img{
-        height: 408px;
+        width: 200px;
         @include mq(pc){
-            height: 510px;
+            width: 250px;
         }
     }
 }
 
 .foods{
     position: absolute;
-    bottom: -157px;
-    left: 20px;
+    bottom: -155px;
+    left: 21px;
     @include mq(pc){
         bottom: -96px;
-        left: 0;
+        left: 337px;
     }
     img{
         width: 86px;
+        height: 141px;
         @include mq(pc){
             width: 202px;
+            height: 332px;
         }
     }
 }
@@ -509,7 +521,7 @@ $breakpoints:(
     right: 29px;
     @include mq(pc){
         bottom: -140px;
-        right: 0;
+        right: 332px;
     }
     img{
         width: 98px;
@@ -524,7 +536,7 @@ $breakpoints:(
     bottom: -99px;
     right: 20px;
     @include mq(pc){
-        right:63px;
+        right:395px;
         bottom: -36px;
     }
     img{
@@ -537,18 +549,18 @@ $breakpoints:(
 
 // Aboutセクション
 .about{
-    padding-top: 32px;
-    padding-bottom: 33px;
-
-    @include mq(pc){
-        padding-top: 80px;
-        padding-bottom: 0;
-    }
 }
 
 .about__img-position{
     position: relative;
     overflow: hidden;
+}
+
+.about__inner{
+
+    @include mq(pc){
+        padding-top: 80px;
+    }
 }
 
 .about__content{
@@ -570,31 +582,35 @@ $breakpoints:(
 .about__img1{
     position: absolute;
     top: 31.87px;
-    left: 34px;
+    left: 53px;
     @include mq(pc){
-        top: 40px;
+        top: 120px;
         left: 417px;
     }
     img{
-        width: 80px;
+        width: 88px;
+        height: 70px;
         @include mq(pc){
-            width: 139px;
+            width: 150px;
+            height: 120px;
         }
     }
 }
 
 .about__img2{
     position: absolute;
-    top: 31.87px;
-    right: 33px;
+    top: 30px;
+    right: 39.78px;
     @include mq(pc){
-        top: 40px;
+        top: 128px;
         right: 417px;
     }
     img{
-        width: 80px;
+        width: 88px;
+        height: 70px;
         @include mq(pc){
-            width: 139px;
+            width: 150px;
+            height: 120px;
         }
     }
 }
@@ -605,25 +621,29 @@ $breakpoints:(
     gap: 24px;
     justify-content: center;
     @include mq(pc){
-        gap: 32px;
+        gap: 34px;
     }
 }
 
-.about__head-center{
+.head-center{
     text-align: center;
 }
 
 .about__icon{
+    margin-top: 6px;
+}
+
+.icon{
     img{
-        width: 37.333px;
+        width: 32px;
         @include mq(pc){
             width: 48px;
         }
     }
 }
 
-.about__title{
-    margin-top: 6px;
+.title{
+    margin-top: 14px;
     font-family: $font-family-en1;
     font-size: 16px;
     font-weight: 400;
@@ -633,15 +653,17 @@ $breakpoints:(
     }
 }
 
-.about__sub {
+.sub {
     font-family: $font-family-ja2;
     font-size: 20px;
     font-weight: 500; // corrected from 500px to 500
     line-height: 125%;
     position: relative;
-    padding-bottom: 6px;
+    padding-bottom: 12px;
     width: fit-content;
-    margin:0 auto;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 6px;
     @include mq(pc){
         margin-top: 8px;
         font-size: 32px;
@@ -667,20 +689,28 @@ $breakpoints:(
     padding-bottom: 24px;
     font-size: 14px;
     font-weight: 700;
+    line-height: 160%;
+    @include mq(pc){
+        font-size: 16px;
+        letter-spacing: 0.3px;
+        padding-bottom: 32px;
+    }
 }
 
 .about__description{
     font-size: 12px;
     font-weight: 400;
     text-align: center;
+    line-height: 157%;
     @include mq(pc){
-        font-style: 16px;
+        font-size: 16px;
+        line-height: 162%;
     }
 
     +.about__description{
-        margin-top: 24px;
+        margin-top: 19px;
         @include mq(pc){
-            margin-top: 32px;
+            margin-top: 26px;
         }
     }
 }
@@ -689,6 +719,7 @@ $breakpoints:(
 }
 
 .about__text-end{
+    margin-top: 10px;
     text-align: center;
     font-size: 14px;
     font-style: normal;
@@ -697,9 +728,12 @@ $breakpoints:(
     border-bottom: 2px dashed $main-color;
     white-space: nowrap;
     @include mq(pc){
+        padding-bottom: 12px;
+        margin-top: 15px;
         width: fit-content;
         font-size: 20px;
-        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -710,12 +744,12 @@ $breakpoints:(
 
 .about__img-left{
     position: absolute;
-    top: 362px;
+    top: 395px;
     left: -140px;
     z-index: -1;
     @include mq(pc){
-        top: 85px;
-        left: -285px;
+        top: 158px;
+        left: -341px;
     }
     img{
         width: 200px;
@@ -728,10 +762,10 @@ $breakpoints:(
 .about__img-right{
     position: absolute;
     right: -140px;
-    top: 240px;
+    top: 273px;
     z-index: -1;
     @include mq(pc){
-        top:85px;
+        top:154px;
         right: -285px;
     }
     img{
@@ -744,11 +778,11 @@ $breakpoints:(
 
 .about-arrow{
     position: absolute;
-    top: 690px;
+    top: 707px;
     left: 50%;
     transform: translate(-50%);
     @include mq(pc){
-        top: 829px;
+        top: 909px;
     }
 
     img{
@@ -761,10 +795,10 @@ $breakpoints:(
 
 .about-maru2ko{
     position: absolute;
-    top: 700px;
-    right: 51px;
+    top: 720px;
+    right: 41px;
     @include mq(pc){
-        top: 621px;
+        top: 685px;
         right: 189px;
     }
 
@@ -778,10 +812,10 @@ $breakpoints:(
 
 .about-marutyari{
     position: absolute;
-    top: 732px;
+    top: 748px;
     right: 21px;
     @include mq(pc){
-        top: 685px;
+        top: 744px;
         right: 150px;
     }
     img{
@@ -794,10 +828,11 @@ $breakpoints:(
 
 .about-goods{
     position: absolute;
-    top: 747px;
-    right: 65px;
+    top: 762px;
+    right: 58px;
+    z-index: -1;
     @include mq(pc){
-        top: 777px;
+        top: 836px;
         right: 74px;
     }
     img{
@@ -810,15 +845,15 @@ $breakpoints:(
 
 .sakamichi{
     position: absolute;
-    top: 690px;
-    left: -20px;
+    top: 708px;
+    left: -1px;
     z-index: 0;
     @include mq(pc){
-        top: 621px;
-        left: -30px;
+        top: 400px;
+        left: -100px;
     }
     img{
-        width: 216px;
+        width: 140px;
         @include mq(pc){
             width: 427px;
         }
@@ -831,6 +866,10 @@ $breakpoints:(
     bottom: 0;
     left: 50%;
     transform: translate(-50%);
+
+    @include mq(pc){
+        bottom: -10px;
+    }
     img{
         width: 335px;
         @include mq(pc){
@@ -848,11 +887,16 @@ $breakpoints:(
     gap: 10px;
     width: 100px;
     transition-timing-function: linear;
+    @include mq(pc){
+        width: 200px;
+        gap: 20px;
+    }
 }
 
 .swiper-slide {
-    width: 100px;
+
     img{
+        width: 100px;
         @include mq(pc){
             width: 200px;
         }
@@ -864,14 +908,16 @@ $breakpoints:(
     top: -10px;
     left: -20px;
     z-index: -2;
+    @include mq(pc){
+        top: 65px;
+    }
     img{
         width: 250px;
     }
 }
 .nikukyu{
-    overflow: visible;
     position: absolute;
-    top: -40px;
+    top: 0px;
     right: 166px;
     img{
         width: 100px;
@@ -880,9 +926,12 @@ $breakpoints:(
 
 .line {
     position: absolute;
-    right: -575px;
-    top: 618px;
+    right: -564px;
+    top: 680px;
     z-index: -1;
+    @include mq(pc){
+    
+    }
     img{
         width: 809px;
     }
@@ -890,15 +939,367 @@ $breakpoints:(
 .line-long {
     position: absolute;
     right: -501px;
-    top: 651px;
+    top: 713px;
     z-index: -1;
     img{
         width: 809px;
     }
 }
 
+// how-to-enterセクション
 
+.how-to-enter{
+}
 
+.how-to-enter__img-position{
+    position: relative;
+    overflow: hidden;
+}
 
+.how-to-enter__inner{
+    padding-top: 60px;
+    padding-bottom: 37.67px;
 
+    @include mq(pc){
+        padding-top: 115px;
+        padding-bottom: 120px;
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+}
+
+.how-to-enter__icon{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    img{
+        width: 40px;
+        @include mq(pc){
+            width: 50px;
+        }
+    }
+}
+
+.how-to-enter__title{
+    margin-top: 8px;
+}
+
+.how-to-enter__content{
+    text-align: center;
+}
+
+.how-to-enter__steps{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 32px;
+    z-index: 30;
+    @include mq(pc){
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 40px;
+        position: relative;
+        gap: 32px;
+    }
+}
+
+.how-to-enter__step{
+    padding-bottom: 16px;
+    @include mq(pc){
+        padding-left: 21px;
+    }
+
+    &:nth-of-type(2){
+    @include mq(pc){
+        margin-top: 69px;
+        padding-left: 20px;
+    }
+}
+    &:nth-of-type(3){
+        @include mq(pc){
+            padding-left: 10px;
+        }
+}
+}
+
+.step__img{
+    img{
+        width: 196px;
+        @include mq(pc){
+            width: 280px;
+        }
+    }
+}
+.step__main{
+    margin-top: 18px;
+    font-size: 16px;
+    font-weight: 700;
+    @include mq(pc){
+        margin-top: 27px;
+        font-size: 20px;
+    }
+}
+
+.step__text{
+    margin-top: 18px;
+    font-size: 12px;
+    font-weight: 400;
+    @include mq(pc){
+        font-size: 16px;
+    }
+}
+
+.step__follow{
+    margin-top: 18px;
+    background-color: #fff;
+    display: flex;
+    gap: 8px;
+    width: 226px;
+    height: 38px;
+    padding: 8px 12px;
+    margin-left: auto;
+    margin-right: auto;
+    @include mq(pc){
+        width: 254px;
+        height: 42px;
+    }
+}
+
+.insta-icon{
+    img{
+        width: 20px;
+        @include mq(pc){
+            width: 24px;
+        }
+    }
+}
+
+.step__text__follow{
+    font-size: 14px;
+    font-weight: 700;
+    @include mq(pc){
+        font-size: 16px;
+    }
+}
+.step__next{
+    margin: 0 auto;
+    img{
+        width: 7px;
+        height: 34px;
+        @include mq(pc){
+            width: 24px;
+            height: 113px;
+            transform: rotate(90deg);
+        }
+    }
+}
+.next1{
+        @include mq(pc){
+            position: absolute;
+            top: 158px;
+            left: 440px;
+    }
+}
+.next2{
+    @include mq(pc){
+        position: absolute;
+        top: 158px;
+        right: 485px;
+
+    }
+}
+
+.how-to-enter__button{
+    margin-left: auto;
+    margin-right: auto;
+    @include mq(pc){
+        margin-top: 34px;
+    }
+}
+.how-to-enter__img{
+    z-index: -5;
+}
+.how-to-enter__map{
+    position: absolute;
+    top: 64.8px;
+    left: 0;
+    @include mq(pc){
+        top: 60px;
+        left: 36px;
+    }
+    img{
+        width: 149px;
+        @include mq(pc){
+            width: 460px;
+        }
+    }
+}
+.how-to-enter__cat3{
+    position: absolute;
+    top: 64.8px;
+    right: 24px;
+    @include mq(pc){
+        top: 94px;
+        right: 231px;
+    }
+    img{
+        width: 105px;
+        @include mq(pc){
+            width: 238px;
+        }
+    }
+}
+.how-to-enter__cat4{
+    position: absolute;
+    top: 69.8px;
+    right: -30px;
+    @include mq(pc){
+        top: 103.97px;
+        right: 105px;
+    }
+    img{
+        width: 94px;
+        @include mq(pc){
+            width: 214px;
+        }
+    }
+}
+.nikukyu2{
+    position: absolute;
+    top: 137px;
+    right: 21px;
+    @include mq(pc){
+        top: 267px;
+        right: 35px;
+    }
+    img{
+        width: 55px;
+        @include mq(pc){
+            width: 100px;
+        }
+    }
+}
+.nikukyu3{
+    position: absolute;
+    top: 614.35px;
+    left: 20px;
+    transform: rotate(180deg);
+    @include mq(pc){
+        top: 700px;
+        left: 36px;
+    }
+    img{
+        width: 55px;
+        @include mq(pc){
+            width: 100px;
+        }
+    }
+}
+.nikukyu4{
+    position: absolute;
+    top: 944.68px;
+    right: 20px;
+    transform: rotate(180deg);
+    img{
+        width: 55px;
+    }
+}
+
+// prizesセクション
+.prizes{
+    margin-top: 101px;
+}
+
+.prizes__background{
+    background-color: #FFF;
+    border-radius: 24px;
+    text-align: center;
+    position: relative;
+}
+
+.prizes__background__img{
+    position: absolute;
+    top: -82px; /* 上部に配置 */
+    left: 50%;  /* 左右中央に配置 */
+    transform: translateX(-50%); /* left 50%の位置から要素の幅の半分を引いて、中央揃え */
+}
+
+.prizes__content{
+    position: relative;
+}
+.prizes__head-center{
+    top: -62px;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+}
+
+.prizes__text{
+    padding-top: 60px;
+}
+.prizes__cards{
+    margin-top: 48px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 39px 15px;
+    width: 100%;
+    justify-content: center;
+}
+.prizes__card{
+    width: 160px;
+    position: relative;
+}
+.prizes__card-number{
+    position: absolute;
+    top: -24px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.prizes__main-img{
+    border-radius: 8px;
+    img{
+        width: 160px;
+    }
+}
+.prizes__prizes{
+    font-size: 7.68px;
+    font-weight: 700;
+}
+
+.prizes__num{
+    font-size: 23.04px;
+    font-family: $font-family-en2;
+    font-weight: 700;
+    line-height: 100%;
+}
+
+.prizes__description{
+    background-color: #F5F5F5;
+    border-radius: 8px;
+    position: relative;
+    height: 56px;
+}
+
+.prizes__serch{
+    position: absolute;
+    left: 100%;
+    transform: translateX(-35px);
+    top: 20px;
+}
+
+.prizes__description-text{
+    font-size: 12px;
+    font-weight: 700;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+.prizes__button{
+    margin-top: 18px;
+    margin-bottom: 35px;
+}
 
