--- a/css/style.css
+++ b/css/style.css
@@ -1155,7 +1155,7 @@ body {
 }
 
 .how-to-enter__title {
-  margin-top: 8px;
+  margin-top: 5px;
 }
 
 .how-to-enter__content {
@@ -1440,7 +1440,31 @@ body {
 }
 
 .prizes {
-  margin-top: 101px;
+  margin-top: 84px;
+  position: relative;
+}
+@media screen and (min-width:768px) {
+  .prizes {
+    margin-top: 156px;
+  }
+}
+
+.triangle1 {
+  position: absolute;
+  width: 315px;
+  height: 86px;
+  top: -100px;
+  left: 244px;
+}
+
+.triangle2 {
+  position: absolute;
+  width: 315px;
+  height: 86px;
+  top: -100px;
+  right: 244px;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 .prizes__background {
@@ -1448,6 +1472,20 @@ body {
   border-radius: 24px;
   text-align: center;
   position: relative;
+}
+@media screen and (min-width:768px) {
+  .prizes__background {
+    width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .prizes__inner {
+    padding-left: 56px;
+    padding-right: 56px;
+  }
 }
 
 .prizes__background__img {
@@ -1457,9 +1495,38 @@ body {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%); /* left 50%の位置から要素の幅の半分を引いて、中央揃え */
 }
+@media screen and (min-width:768px) {
+  .prizes__background__img {
+    top: -160px;
+  }
+}
+
+.prizes__head-img {
+  width: 238px;
+  height: 83px;
+}
+@media screen and (min-width:768px) {
+  .prizes__head-img {
+    width: 475.3112px;
+    height: 193.6571px;
+  }
+}
 
 .prizes__content {
   position: relative;
+}
+
+.prizes__icon img {
+  width: 35px;
+}
+@media screen and (min-width:768px) {
+  .prizes__icon img {
+    width: 48px;
+  }
+}
+
+.prizes__title {
+  margin-top: 9px;
 }
 
 .prizes__head-center {
@@ -1469,13 +1536,23 @@ body {
           transform: translateX(-50%);
   position: absolute;
 }
+@media screen and (min-width:768px) {
+  .prizes__head-center {
+    top: -120px;
+  }
+}
 
 .prizes__text {
   padding-top: 60px;
 }
+@media screen and (min-width:768px) {
+  .prizes__text {
+    padding-top: 65px;
+  }
+}
 
 .prizes__cards {
-  margin-top: 48px;
+  margin-top: 46px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1487,10 +1564,30 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media screen and (min-width:768px) {
+  .prizes__cards {
+    gap: 80px 32px;
+    margin-top: 82px;
+  }
+}
 
 .prizes__card {
   width: 160px;
   position: relative;
+}
+@media screen and (min-width:768px) {
+  .prizes__card:nth-of-type(1), .prizes__card:nth-of-type(2) {
+    width: 440px;
+  }
+}
+@media screen and (min-width:768px) {
+  .prizes__card:nth-of-type(3), .prizes__card:nth-of-type(4), .prizes__card:nth-of-type(5) {
+    width: 280px;
+  }
+}
+
+.hover-border {
+  border: 4px solid #9ED0E0;
 }
 
 .prizes__card-number {
@@ -1501,11 +1598,53 @@ body {
           transform: translateX(-50%);
 }
 
-.prizes__main-img {
-  border-radius: 8px;
+@media screen and (min-width:768px) {
+  .prizes__card-number1 {
+    top: -50px;
+  }
 }
+
+@media screen and (min-width:768px) {
+  .prizes__card-number2 {
+    top: -40px;
+  }
+}
+
+.prizes__card-number-img {
+  width: 46px;
+  height: 47px;
+}
+
+@media screen and (min-width:768px) {
+  .prizes__card-number-img1 {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .prizes__card-number-img2 {
+    width: 80px;
+    height: 80px;
+  }
+}
+
 .prizes__main-img img {
   width: 160px;
+}
+
+@media screen and (min-width:768px) {
+  .prizes__main-img1 img {
+    width: 100%;
+    height: 340px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .prizes__main-img2 img {
+    width: 100%;
+    height: 240px;
+  }
 }
 
 .prizes__prizes {
@@ -1524,15 +1663,42 @@ body {
   background-color: #F5F5F5;
   border-radius: 8px;
   position: relative;
+  width: 100%;
   height: 56px;
 }
 
-.prizes__serch {
+@media screen and (min-width:768px) {
+  .prizes__description1 {
+    height: 120px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .prizes__description2 {
+    height: 81px;
+  }
+}
+
+.prizes__serch-img {
   position: absolute;
-  left: 100%;
-  -webkit-transform: translateX(-35px);
-          transform: translateX(-35px);
-  top: 20px;
+  right: 0;
+  bottom: 0;
+  width: 36px;
+  height: 37px;
+}
+
+@media screen and (min-width:768px) {
+  .prizes__serch-img1 {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .prizes__serch-img2 {
+    width: 64px;
+    height: 64px;
+  }
 }
 
 .prizes__description-text {
@@ -1545,8 +1711,25 @@ body {
           transform: translate(-50%, -50%);
   width: 100%;
 }
+@media screen and (min-width:768px) {
+  .prizes__description-text {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .prizes__description-text1 {
+    font-size: 20px;
+  }
+}
 
 .prizes__button {
   margin-top: 18px;
   margin-bottom: 35px;
+}
+@media screen and (min-width:768px) {
+  .prizes__button {
+    margin-top: 40px;
+    margin-bottom: 53px;
+  }
 }
