--- a/sass/style.scss
+++ b/sass/style.scss
@@ -183,6 +183,10 @@ $breakpoints:(
     box-shadow: 0px 4px 0px 0px #4A3636;
     font-size: 14px;
     font-weight: 700;
+    @include mq(pc){
+        width: 96px;
+        height: 40px;
+    }
   }
   .button2{
     display: inline-flex;
@@ -1209,6 +1213,7 @@ $breakpoints:(
 .prizes{
     margin-top: 84px;
     position: relative;
+    overflow: hidden;
     @include mq(pc){
         margin-top: 156px;
     }
@@ -1315,16 +1320,14 @@ $breakpoints:(
 .prizes__card{
     width: 160px;
     position: relative;
-    &:nth-of-type(1),&:nth-of-type(2){
         @include mq(pc){
             width: 440px;
         }
-    }
+}
 
-    &:nth-of-type(3),&:nth-of-type(4),&:nth-of-type(5){
-        @include mq(pc){
-            width: 280px;
-        }
+.prizes__card-small{
+    @include mq(pc){
+        width: 280px;
     }
 }
 .hover-border{
@@ -1369,6 +1372,7 @@ $breakpoints:(
 .prizes__main-img{
     img{
         width: 160px;
+        border-radius: 8px 8px 0 0; 
     }
 }
 .prizes__main-img1{
@@ -1460,8 +1464,157 @@ $breakpoints:(
     margin-bottom: 35px;
 
     @include mq(pc){
-        margin-top: 40px;
-        margin-bottom: 53px;
+        margin-top: 33px;
+        margin-bottom: 51px;
     }
+}
+
+.prizes__modal{
+    display: none;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1; 
+}
+.prizes__modal__bg{
+    background: rgba(0, 0, 0, 0.6);
+    height: 100vh;
+    width: 100%;
+}
+.modal-card{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 336px;
+    height: 480px;
+    background-color: #fff;
+    border-radius: 24px;
+    @include mq(pc){
+        width: 480px;
+        height: 650px;
+    }
+
+    img{
+        width: 336px;
+        height: 210px;
+        @include mq(pc){
+            width: 480px;
+            height: 300px;
+            border-radius: 24px 24px 0 0; 
+        }
+    }
+}
+.modal__text{
+    margin-top: 39px;
+    margin-bottom: 16px;
+    padding-inline: 20px;
+    @include mq(pc){
+        margin-top: 32px;
+        padding-inline: 40px;
+    }
+}
+
+.modal__title{
+    font-size: 16px;
+    font-weight: 700;
+    @include mq(pc){
+        font-size: 20px;
+    }
+}
+.modal__description{
+    font-size: 12px;
+    font-weight: 400;
+    margin-top: 12px;
+    @include mq(pc){
+        margin-top: 24px;
+        font-size: 16px;
+    }
+}
+
+.is-fixed{
+    overflow: hidden;
+}
+
+.middle__bg{
+    position: relative;
+    overflow: hidden;
+}
+
+.middle__bg-img {
+    background: url(../img/bg_pic.png);
+    width: 580px;
+    height: 260px;
+    background-position: 50% -40px;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    
+    @include mq(pc) {
+        top: 0;
+        width: 1512px;
+        height: 640px;
+    }
+}
+// おすすめセクション
+.recommend{
+    background-color: #67B0C7;
+}
+.recommend__content{
+    overflow: hidden;
+}
+.recommend__title{
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.star{
+    img{
+        width: 28px;
+    }
+}
+.recommend__title-text{
+    color: #FFF;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 125%; 
+    }
+
+.recommend__cards{
+    margin-top: 24px;
+    display: flex;
+    gap: 16px;
+}
+.recommend__card{
+    background-color: #FFF;
+    width: 240px;
+    height: 402px;
+    border-radius: 12px;
+    img{
+        border-radius: 12px 12px 0 0;
+        width: 240px;
+    }
+}
+
+.recommend__card-text{
+    text-align: center;
+    padding-top: 16px;
+    padding-inline: 24px;
+    padding-bottom: 51px;
+}
+
+.recommend__card-main{
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.recommend__card-sub{
+    margin-top: 16px;
+    font-size: 12px;
+    font-weight: 400;
 }
 
