--- a/sass/style.scss
+++ b/sass/style.scss
@@ -184,8 +184,8 @@ $breakpoints:(
     font-size: 14px;
     font-weight: 700;
     @include mq(pc){
-        width: 96px;
-        height: 40px;
+        width: 132px;
+        height: 36px;
     }
   }
   .button2{
@@ -882,11 +882,11 @@ $breakpoints:(
     }
 }
 
-.swiper {
+.about-swiper {
     overflow: hidden;
 }
 
-.swiper-wrapper {
+.about-swiper-wrapper {
     display: flex;
     gap: 10px;
     width: 100px;
@@ -897,7 +897,7 @@ $breakpoints:(
     }
 }
 
-.swiper-slide {
+.about-swiper-slide {
 
     img{
         width: 100px;
@@ -1541,36 +1541,77 @@ $breakpoints:(
 
 .middle__bg{
     position: relative;
+    justify-content:center;
+    align-items: center;
     overflow: hidden;
-}
-
-.middle__bg-img {
-    background: url(../img/bg_pic.png);
-    width: 580px;
-    height: 260px;
-    background-position: 50% -40px;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    
+    width: 375px;
+    height: 214px;
     @include mq(pc) {
-        top: 0;
         width: 1512px;
         height: 640px;
     }
 }
+
+.middle__bg-img {
+    position: absolute;
+    background: url(../img/bg_pic.png) center center no-repeat;
+    width: 375px;
+    height: 260px;
+    background-position: top -46px left -101px;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @include mq(pc){
+        background-position: top 0 left 0;
+        width: 1512px;
+        height: 640px;
+    }
+
+}
 // おすすめセクション
 .recommend{
+    margin-bottom: 46px;
     background-color: #67B0C7;
+    position: relative;
 }
+.recommend__head__form{
+
+}
+
+.recommend__head__form1{
+    position: absolute;
+    top: -46px;
+}
+.recommend__head__form2{
+    position: absolute;
+    top: -46px;
+    left: 96px;
+}
+.recommend__head__form3{
+    position: absolute;
+    top: -46px;
+    left: 192px;
+}
+.recommend__head__form4{
+    position: absolute;
+    top: -46px;
+    right: 0;
+}
+
 .recommend__content{
     overflow: hidden;
 }
 .recommend__title{
+    margin-top: 3px;
     display: flex;
     gap: 8px;
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    @include mq(pc){
+        writing-mode: vertical-rl;
+    }
 }
 .star{
     img{
@@ -1585,10 +1626,26 @@ $breakpoints:(
     }
 
 .recommend__cards{
-    margin-top: 24px;
-    display: flex;
-    gap: 16px;
+    margin-top: 22px;
+    text-align: center;
 }
+
+.swiper{
+
+}
+
+.recommend-swiper-slide {
+    display: flex;            /* フレックスボックスを使用 */
+    justify-content: center;   /* 横方向の中央揃え */
+    align-items: center;       /* 縦方向の中央揃え */
+    height: 100%;              /* スライドの高さを親要素に合わせる */
+  }
+  
+  .recommend-swiper-wrapper {
+    height: 100%;              /* スライダーの高さを100%に設定 */
+  }
+  
+
 .recommend__card{
     background-color: #FFF;
     width: 240px;
@@ -1602,7 +1659,7 @@ $breakpoints:(
 
 .recommend__card-text{
     text-align: center;
-    padding-top: 16px;
+    padding-top: 19px;
     padding-inline: 24px;
     padding-bottom: 51px;
 }
@@ -1613,8 +1670,51 @@ $breakpoints:(
 }
 
 .recommend__card-sub{
-    margin-top: 16px;
+    text-align: left;
+    margin-top: 19px;
     font-size: 12px;
     font-weight: 400;
 }
+
+.recommend__img-sport{
+    text-align: center;
+    img{
+        width: 250px;
+    }
+}
+.recommend__white-text{
+    color: #fff;
+    font-size: 11.444px;
+    font-weight: 400;
+    margin-top: 16px;
+    line-height: 160%;
+    text-align: center;
+}
+
+.recommend__button{
+    margin-bottom: 20px;
+    margin-top: 25px;
+}
+
+.recommend__bottom__icon1{
+    position: absolute;
+    bottom: -46px;
+}
+.recommend__bottom__icon2{
+    position: absolute;
+    bottom: -46px;
+    left: 96px;
+}
+.recommend__bottom__icon3{
+    position: absolute;
+    bottom: -46px;
+    left: 192px;
+}
+.recommend__bottom__icon4{
+    position: absolute;
+    bottom: -46px;
+    right: 0;
+}
+
+
 
